cambio a sdk cloud